feat: Implement comprehensive Page Object Models (POM) architecture
- Add BasePage class with common functionality and locators
- Implement LoginPage with form interactions and validations
- Implement DashboardPage with authentication and navigation methods
- Create PageFactory pattern for dynamic page instantiation
- Add enhanced fixtures supporting page object patterns
- Refactor existing tests to use POM approach
- Add comprehensive JSDoc documentation
- Include structure validation tests
- Update TypeScript configuration for page object imports

This implementation provides:
- Better maintainability through encapsulation
- Reusable page methods across tests
- Centralized locator management
- Clean separation of concerns
- Scalable architecture for large projects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       "@config/*": ["./config/*"],
       "@helpers/*": ["./helpers/*"],
       "@fixtures/*": ["./fixtures/*"],
-      "@tests/*": ["./tests/*"]
+      "@tests/*": ["./tests/*"],
+      "@pages": ["./pages/index.ts"],
+      "@pages/*": ["./pages/*"]
     }
   },
   "include": [
