--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "QA Automation Team",
   "license": "MIT",
   "devDependencies": {
+    "@executeautomation/playwright-mcp-server": "^1.0.6",
     "@playwright/test": "^1.40.0",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0"
@@ -32,4 +33,3 @@
     "dotenv": "^16.3.1"
   }
 }
-
